--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
     <main>
       <!--Главный баннер-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!--Особенности-->
       <section class="features section">
