--- a/portfolio.html
+++ b/portfolio.html
@@ -56,89 +56,112 @@
           </ul>
           <ul class="projects-list list">
             <li class="item">
-              <img
-                src="./images/project1.jpg"
-                alt="ноутбук со страницей сайта"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h2 class="project-title">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project1.jpg"
+                  alt="ноутбук со страницей сайта"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/project2.jpg"
-                alt="двое мужчин играют в баскетбол "
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h2 class="project-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="project-type">Дизайн</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project2.jpg"
+                  alt="двое мужчин играют в баскетбол "
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h2 class="project-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="./images/project3.jpg" alt="логотип ресторана" width="370" height="294" />
-              <div class="content">
-                <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="project-type">Приложение</p>
-              </div>
+              <a href="" class="projects-link">
+                <img src="./images/project3.jpg" alt="логотип ресторана" width="370" height="294" />
+                <div class="content">
+                  <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="project-type">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="./images/project4.jpg" alt="наушники" width="370" height="294" />
-              <div class="content">
-                <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
-                <p class="project-type">Маркетинг</p>
-              </div>
+              <a href="" class="projects-link">
+                <img src="./images/project4.jpg" alt="наушники" width="370" height="294" />
+                <div class="content">
+                  <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="./images/project5.jpg" alt="две коробки" width="370" height="294" />
-              <div class="content">
-                <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
-                <p class="project-type">Приложение</p>
-              </div>
+              <a href="" class="projects-link">
+                <img src="./images/project5.jpg" alt="две коробки" width="370" height="294" />
+                <div class="content">
+                  <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="project-type">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="./images/project6.jpg" alt="монитор компьютера" width="370" height="294" />
-              <div class="content">
-                <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project6.jpg"
+                  alt="монитор компьютера"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="./images/project7.jpg" alt="раскрытый журнал" width="370" height="294" />
-              <div class="content">
-                <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
-                <p class="project-type">Дизайн</p>
-              </div>
+              <a href="" class="projects-link">
+                <img src="./images/project7.jpg" alt="раскрытый журнал" width="370" height="294" />
+                <div class="content">
+                  <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/project8.jpg"
-                alt="этикетка с логотипом"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
-                <p class="project-type">Маркетинг</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project8.jpg"
+                  alt="этикетка с логотипом"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img
-                src="./images/project9.jpg"
-                alt="руки на клавиатуре ноутбука"
-                width="370"
-                height="294"
-              />
-              <div class="content">
-                <h2 class="project-title" lang="en">Growing Business</h2>
-                <p class="project-type">Приложение</p>
-              </div>
+              <a href="" class="projects-link">
+                <img
+                  src="./images/project9.jpg"
+                  alt="руки на клавиатуре ноутбука"
+                  width="370"
+                  height="294"
+                />
+                <div class="content">
+                  <h2 class="project-title" lang="en">Growing Business</h2>
+                  <p class="project-type">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
